--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -17,7 +17,7 @@ padding: 10px 15px 10px 15px;
   font-size: 1.5rem;
   font-weight: bold;
   text-decoration: none;
-  color: var(--text-color);
+  color: var(--header-text-color);
 }
 
 nav ul {
@@ -34,7 +34,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   font-weight: bold;
-  color: var(--text-color);
+  color: var(--header-text-color);
 }
 
 nav ul li a:hover {
@@ -50,7 +50,7 @@ nav ul li a:hover {
 .hamburger span {
   width: 25px;
   height: 3px;
-  background-color: var(--text-color);
+  background-color: var(--header-text-color);
   margin: 2px 0;
   transition: 0.4s;
 }
