--- a/layouts/partials/listposts.html
+++ b/layouts/partials/listposts.html
@@ -1,3 +1,4 @@
+
 {{ $pages := .Pages }}
 {{ $sortedPages := sort $pages "File.Path" }}
 
@@ -17,13 +18,11 @@
 
 <ul>
 {{ range $sortedCustom }}
-{{ $page := .page }}
    <div class="post-item">
    <li>
-   <a href="{{ .permalink }}">{{ $page.Title }}</a>
+   <a href="{{ .permalink | relURL }}">{{ $page.Title }}</a>
    </li>
-   <div>{{ $page.Params.Summary }}</div>
+   <div>{{ .page.Params.Summary }}</div>
    </div>
 {{ end }}
 </ul>
-
