--- a/layouts/partials/listposts.html
+++ b/layouts/partials/listposts.html
@@ -17,12 +17,11 @@
 
 <ul>
 {{ range $sortedCustom }}
-{{ $page := .page }}
    <div class="post-item">
    <li>
-   <a href="{{ .permalink }}">{{ $page.Title }}</a>
+   <a href="{{ .permalink | relURL }}">{{ $page.Title }}</a>
    </li>
-   <div>{{ $page.Params.Summary }}</div>
+   <div>{{ .page.Params.Summary }}</div>
    </div>
 {{ end }}
 </ul>
