--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,6 +13,10 @@ padding: 10px 15px 10px 15px;
   align-items: center;
 }
 
+.header-content img {
+width: 50px;
+}
+
 .site-title a {
   font-size: 1.5rem;
   font-weight: bold;
