--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,18 +22,14 @@ h1, h2, h3, h4, h5 {
 color: var(--header-text-color);
 }
 
-img {
+main img {
 display: block;
 width: 100%;
 max-width: 500px;
 margin-left: auto;
 margin-right: auto;
 }
-.banner img {
-   max-width: 100%;
-   border-radius: 5px;
-}
-   
+
 tr,td {
 border: 1px solid white !important;
 }
