--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <header>
   <div class="container">
     <div class="header-content">
-         <img src="/images/tau.png"/>
       <div class="site-title">
+        <span><img src="/images/tau.png"></span>
         <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       </div>
       <nav>
