--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-content">
       <div class="site-title">
-        <span><img src="/images/tau.png"></span>
+        <img src="/images/tau.png">
         <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       </div>
       <nav>
