--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -27,7 +27,7 @@ margin-right: 5px;
   font-size: 1.5rem;
   font-weight: bold;
   text-decoration: none;
-  color: var(--header-text-color);
+  color: var(--text-color);
 }
 
 nav ul {
@@ -44,7 +44,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   font-weight: bold;
-  color: var(--header-text-color);
+  color: var(--text-color);
 }
 
 nav ul li a:hover {
@@ -60,7 +60,7 @@ nav ul li a:hover {
 .hamburger span {
   width: 25px;
   height: 3px;
-  background-color: var(--header-text-color);
+  background-color: var(--text-color);
   margin: 2px 0;
   transition: 0.4s;
 }
