--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,5 +1,14 @@
 {{ define "main" }}
 
+<div class="quick-links">
+  {{ range .Site.Params.quickLinks }}
+  <a href="{{ .url }}" class="quick-link">
+    <i class="{{ .icon }}" aria-hidden="true"></i>
+    <span>{{ .title }}</span>
+  </a>
+  {{ end }}
+</div>
+
 <div class="content">
 <article>
 {{ .Content }}
