--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,5 @@
 {{ define "main" }}
 
-pp
 <div class="quick-links">
   {{ range .Site.Params.quickLinks }}
   <a href="{{ .url }}" class="quick-link">
@@ -17,6 +16,7 @@ pp
 </div>
 
 <h2>{{ i18n "index" }}</h2>
+ppppppp
 
 {{ partial "listposts.html" . }}
 
