--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,11 +1,10 @@
 {{ define "main" }}
 
-
 <div class="quick-links">
     <div class="quick-links-container">
         {{ range sort .Site.Params.quickLinks ".order" }}
             <div class="quick-links-group">
-                <h3>{{ .title }}</h3>
+                {{ .title }}
                 <ul>
                     {{ range .links }}
                         <li><a href="{{ .url }}">{{ .title }}</a></li>
