--- a/assets/css/links.css
+++ b/assets/css/links.css
@@ -6,17 +6,17 @@
 .quick-links-container {
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: space-between; /* Distribute space between items */
+    justify-content: flex-start; /* Align items to the start */
 }
 
 .quick-links-group {
     flex: 1 1 30%; /* Allow each group to grow and shrink, with a base width of 30% */
-    margin: 5px; /* Reduced space between groups */
-    min-width: 200px; /* Minimum width for each group */
+    margin: 2px; /* Reduced space between groups */
+    min-width: 150px; /* Minimum width for each group */
 }
 
 .quick-links-group h3 {
-    margin-bottom: 5px; /* Reduced space below the title */
+    margin-bottom: 2px; /* Reduced space below the title */
 }
 
 .quick-links ul {
@@ -25,7 +25,7 @@
 }
 
 .quick-links li {
-    margin-bottom: 3px; /* Reduced space between list items */
+    margin-bottom: 2px; /* Reduced space between list items */
 }
 
 /* Responsive styles */
