--- a/assets/css/links.css
+++ b/assets/css/links.css
@@ -1,4 +1,3 @@
-
 .quick-links {
     margin-bottom: 20px; /* Space below the quick links section */
 }
@@ -10,13 +9,12 @@
 }
 
 .quick-links-group {
-    flex: 1 1 30%; /* Allow each group to grow and shrink, with a base width of 30% */
-    margin: 2px; /* Reduced space between groups */
-    min-width: 150px; /* Minimum width for each group */
+    margin: 10px; /* Reduced space between groups */
 }
 
-.quick-links-group h3 {
-    margin-bottom: 2px; /* Reduced space below the title */
+.quick-links-group .links-title {
+font-size 20px;
+font-weight: bold;
 }
 
 .quick-links ul {
