--- a/assets/css/links.css
+++ b/assets/css/links.css
@@ -1,5 +1,5 @@
 .quick-links {
-    margin-bottom: 20px; /* Space below the quick links section */
+    margin: 20px 0px 20px 0px;
 }
 
 .quick-links-container {
