--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,18 +1,21 @@
 {{ define "main" }}
 
+
 <div class="quick-links">
-    <div class="quick-links-container">
-        {{ range sort .Site.Params.quickLinks ".order" }}
-            <div class="quick-links-group">
-                <div class="links-title">{{ .title }}</div>
-                <ul>
-                    {{ range .links }}
-                        <li><a href="{{ .url }}">{{ .title }}</a></li>
-                    {{ end }}
-                </ul>
-            </div>
-        {{ end }}
-    </div>
+    {{ if isset .Site.Params "quickLinks" }}
+        <div class="quick-links-container">
+            {{ range sort .Site.Params.quickLinks ".order" }}
+                <div class="quick-links-group">
+                    <div class="links-title">{{ .title }}</div>
+                    <ul>
+                        {{ range .links }}
+                            <li><a href="{{ .url }}">{{ .title }}</a></li>
+                        {{ end }}
+                    </ul>
+                </div>
+            {{ end }}
+        </div>
+    {{ end }}
 </div>
 
 <div class="content">
