--- a/assets/css/links.css
+++ b/assets/css/links.css
@@ -19,7 +19,9 @@ font-weight: bold;
 
 .quick-links ul {
     padding: 10px 0px 0px 0px;
-    margin: 0px 0px 0px 20px;
+    margin: 0px 0px 0px 0px;
+    border-top: 1px solid;
+    list-style: inside;
 }
 
 .quick-links li {
