--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,10 @@
     <div class="header-content">
       <div class="site-title">
         <a href="{{ .Site.BaseURL }}">
-        {{ .Site.Title }}
         <img src="/images/tau.png">
+        </a>
+        <a href="{{ .Site.BaseURL }}">
+        {{ .Site.Title }}
         </a>
       </div>
       <nav>
