--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,8 +2,10 @@
   <div class="container">
     <div class="header-content">
       <div class="site-title">
+        <a href="{{ .Site.BaseURL }}">
         <img src="/images/tau.png">
-        <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+        {{ .Site.Title }}
+        </a>
       </div>
       <nav>
         <div class="hamburger">
