--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
       <div class="site-title">
         <a href="{{ .Site.BaseURL }}">
         <img src="/images/tau.png">
-        {{ .Site.Title }}
+        <span>{{ .Site.Title }}</span>
         </a>
       </div>
       <nav>
