--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-content">
       <div class="site-title">
-        <a href="{{ .Site.BaseURL }}">
+        <a href="/">
            <img src="/images/tau.png">
            <span>{{ .Site.Title }}</span>
         </a>
