--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
+
 <header>
   <div class="container">
     <div class="header-content">
@@ -15,7 +16,7 @@
         </div>
         <ul class="nav-menu">
           {{ range .Site.Menus.main }}
-            <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+            <li><a href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a></li> <!-- Include Pre here -->
           {{ end }}
         </ul>
       </nav>
