--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,3 @@
-
 <header>
   <div class="container">
     <div class="header-content">
@@ -14,18 +13,9 @@
           <span></span>
           <span></span>
         </div>
-        <ul class="nav-menu language-menu">
+        <ul class="nav-menu">
           {{ range .Site.Menus.main }}
-            {{ if or (eq .Name "English") (eq .Name "Italiano") }}
-              <li><a href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a></li>
-            {{ end }}
-          {{ end }}
-        </ul>
-        <ul class="nav-menu social-menu">
-          {{ range .Site.Menus.main }}
-            {{ if or (eq .Name "YouTube") (eq .Name "Twitter") }}
-              <li><a href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a></li>
-            {{ end }}
+            <li><a href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a></li> <!-- Include Pre here -->
           {{ end }}
         </ul>
       </nav>
