--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,9 @@
   </div>
   <ul class="nav-menu">
     {{ range .Site.Menus.main }}
-      <li><a href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a></li>
+      <li>
+        <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>{{ .Pre }}{{ .Name }}</a>
+      </li>
     {{ end }}
   </ul>
 </nav>
