--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,14 +1,19 @@
-.quick-links {
+.home main {
+max-width: 800px;
+margin: auto;
+}
+
+.home .quick-links {
   margin: 20px 0px 20px 0px;
 }
 
-.quick-links-container {
+.home .quick-links-container {
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap to the next line */
     justify-content: flex-start; /* Align items to the start */
 }
 
-.quick-links-group {
+.home .quick-links-group {
   margin: 10px;
   background-color: rgb(30,30,30);
   padding: 10px;
@@ -16,14 +21,14 @@
   width: 300px;
 }
 
-.quick-links ul {
+.home .quick-links ul {
     padding: 10px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
     border-top: 1px solid;
     list-style: inside;
 }
 
-.quick-links li {
+.home .quick-links li {
     margin-bottom: 2px; /* Reduced space between list items */
 }
 
