--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 
+<div class="content">
 {{ partial "postnav.html" . }}
 
 <h1>{{ .Title }}</h1>
@@ -19,6 +20,7 @@
 
 {{ partial "pagination.html" . }}
 
+</div>
 {{ end }}
 
 
