--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,30 +1,29 @@
-
 .quick-links {
-  margin: 10px 10px 10px 10px;
+margin: 10px 10px 10px 10px;
 }
 
 .quick-links-container {
-    display: flex;
-    flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: flex-start; /* Align items to the start */
+display: flex;
+flex-wrap: wrap;
+justify-content: centerflex-start;
 }
 
 .quick-links-group {
-  margin: 10px;
-  background-color: rgb(30,30,30);
-  padding: 10px;
-  border-radius: 5px;
-  width: 300px;
+margin: 10px;
+background-color: rgb(30,30,30);
+padding: 10px;
+border-radius: 5px;
+width: 250px;
 }
 
 .quick-links ul {
-    padding: 10px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    border-top: 1px solid;
-    list-style: inside;
+padding: 10px 0px 0px 0px;
+margin: 0px 0px 0px 0px;
+border-top: 1px solid;
+list-style: inside;
 }
 
 .home .quick-links li {
-    margin-bottom: 2px; /* Reduced space between list items */
+margin-bottom: 2px;
 }
 
