--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@ margin: 10px 10px 10px 10px;
 .quick-links-container {
 display: flex;
 flex-wrap: wrap;
-justify-content: centerflex-start;
+justify-content: center;
 }
 
 .quick-links-group {
