--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -17,6 +17,8 @@
     {{ end }}
 </div>
 
+<a href="https://twitter.com/x?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @x</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <div class="content">
 
 <article>
