--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,13 @@
 {{ partial "postnav.html" . }}
 <h1>{{ .Title }}</h1>
 <article>
+
+<div id="sharing">
+<a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}&via={{ .Site.Social.twitter }}" class="twitter" aria-label="Share on Twitter">
+        Share on Twitter
+    </a>
+</div>
+
 {{ .Content }}
 </article>
 </div>
