--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,7 @@
 <article>
 
 <div id="sharing">
-<a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}&via={{ .Site.Social.twitter }}" class="twitter" aria-label="Share on Twitter">
+<a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Summary }}&via={{ .Site.Social.twitter }}" class="twitter" aria-label="Share on Twitter">
         Share on Twitter
     </a>
 </div>
