--- a/layouts/shortcodes/x.html
+++ b/layouts/shortcodes/x.html
@@ -1,6 +1,5 @@
 <div id="sharing">
-<a href="http://twitter.com/share?url={{ Get "permalink" }}&text={{ Get "summary" }}&via={{ .Site.Social.twitter }}" class="twitter" aria-label="Share on Twitter">
+    <a href="http://twitter.com/share?url={{ .Get "permalink" | urlize }}&text={{ .Get "summary" | urlize }}&via={{ .Site.Social.twitter }}" class="twitter" aria-label="Share on Twitter">
         Share on Twitter
     </a>
 </div>
-
