--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
     {{ partial "postnav.html" . }}
     <h1>{{ .Title }}</h1>
 
-{{< partial x.html . >}}
+{{ partial "x.html" . }}
 
     <article>
         {{ .Content }}
