--- a/layouts/partials/x.html
+++ b/layouts/partials/x.html
@@ -1,5 +1,5 @@
 <div id="sharing">
-    <a href="http://twitter.com/share?url={{ .Permalink | urlize }}&text={{ with .Params.tweet }}{{ . | urlquery }}{{ else }}{{ .Title | plainify | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">
+    <a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">
         Share on Twitter
     </a>
 </div>
