--- a/layouts/partials/x.html
+++ b/layouts/partials/x.html
@@ -1,5 +1,5 @@
 <div id="sharing">
-    <a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">
-        Share on Twitter
-    </a>
+
+<a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter"><i class="fab fa-x-twitter"></i> {{ i18n "shareTwitter" }}</a>
+
 </div>
