--- a/layouts/partials/x.html
+++ b/layouts/partials/x.html
@@ -1,5 +1,5 @@
 <div id="sharing">
 
-<a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">{{ i18n "shareTwitter" }}</a> <i class="fab fa-x-twitter"></i> 
+<a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">{{ i18n "shareOn" }}</a> <i class="fab fa-x-twitter"></i> 
 
 </div>
