--- a/layouts/partials/x.html
+++ b/layouts/partials/x.html
@@ -1,4 +1,4 @@
-<div id="sharing">
+<div class="share">
 
 <a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">{{ i18n "shareOn" }} <i class="fab fa-x-twitter"></i></a>
 
