--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 --link-color: #00FFFF;
 --bg-color: black;
 --header-bg-color: #1c1c1e;
+--small-font: 14px;
 }
 
 body {
@@ -57,7 +58,7 @@ margin-top: 50px;
 }
 
 footer, .footnotes {
-font-size: 14px;
+font-size: var(--small-font);
 }
 
 footer p, .footnotes p {
