--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 
+<div home-heading>Quick Links</div>
+
 <div class="quick-links">
     {{ if .Site.Params.quickLinks }}
         <div class="quick-links-container">
