--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<div home-heading>Quick Links</div>
+<div home-heading>{{ i18n "quickLinks" }}</div>
 
 <div class="quick-links">
     {{ if .Site.Params.quickLinks }}
