--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,12 @@
 margin: 10px 10px 10px 10px;
 }
 
+.home-heading {
+text-align: center;
+font-weight: bold;
+margin-top: 20px;
+}
+
 .quick-links-container {
 display: flex;
 flex-wrap: wrap;
