--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -4,24 +4,25 @@
 
 <div class="home-heading">{{ i18n "latestBlog" }}</div>
 
+
 <div class="latest-posts-container">
   {{ $posts := where (where .Site.Pages "Type" "blog") "Section" "blog" }}
   {{ $latestPosts := first 5 (sort $posts "Date" "desc") }}
   {{ range $latestPosts }}
   <div class="post-item">
-    {{ with .Params.image }}
     <a href="{{ .Permalink }}">
+      {{ with .Params.image }}
       <img class="post-image" src="{{ . }}" alt="{{ $.Title }}">
+      {{ else }}
+      <img class="post-image" src="/images/default-thumbnail.jpg" alt="{{ .Title }}">
+      {{ end }}
     </a>
-    {{ end }}
     <h3 class="post-title">
       <a href="{{ .Permalink }}">{{ .Title }}</a>
     </h3>
   </div>
   {{ end }}
 </div>
-
-
 
 
 
