--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -37,6 +37,9 @@ margin-bottom: 2px;
 .quick-links {
 margin: 10px 0px 10px 0px;
 }
+.quick-links-group {
+flex: 1 1 100%;
+}
 
 }
 
@@ -46,8 +49,9 @@ margin: 10px 0px 10px 0px;
  .latest-posts-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
-    padding: 16px;
+    gap: 20px;
+    padding: 10px;
+    justify-content: center;
   }
   .post-item {
     flex: 1 1 calc(50% - 16px);
@@ -56,6 +60,7 @@ margin: 10px 0px 10px 0px;
     border-radius: 8px;
     overflow: hidden;
     background-color: #1e1e1e;
+    width: 270px;
   }
   .post-item img {
     width: 100%;
