--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -34,42 +34,47 @@ margin-bottom: 2px;
 }
 
 @media screen and (max-width: 850px) {
-   .home .quick-links {
-   margin: 10px 0px 10px 0px;
-   }
+.home .quick-links {
+margin: 10px 0px 10px 0px;
+}
 }
 
 
 
 .home .latest-posts-container {
- display: flex;
- flex-wrap: wrap;
- gap: 20px;
- padding: 10px;
- justify-content: center;
+display: flex;
+flex-wrap: wrap;
+gap: 20px;
+padding: 10px;
+justify-content: center;
 }
 .home .post-item {
- text-align: center;
- color: #ffffff;
- border-radius: 8px;
- overflow: hidden;
- background-color: #1e1e1e;
- width: 270px;
+text-align: center;
+color: #ffffff;
+border-radius: 8px;
+overflow: hidden;
+background-color: #1e1e1e;
+width: 270px;
 }
 .home .post-item img {
- width: 100%;
- height: auto;
- display: block;
- border-bottom: 1px solid #2c2c2c;
+width: 100%;
+height: auto;
+display: block;
+border-bottom: 1px solid #2c2c2c;
+height: 300px;
+width: auto;
 }
 .home .post-item h3 {
- font-size: 16px;
- margin: 8px 0;
+font-size: 16px;
+margin: 8px 0;
 }
 .home .post-item a {
- color: #1e90ff;
- text-decoration: none;
+display: block;
+color: #1e90ff;
+text-decoration: none;
+height: 200px;
+overflow: hidden;
 }
 .home .post-item a:hover {
- text-decoration: underline;
+text-decoration: underline;
 }
