--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -12,7 +12,7 @@
   <div class="post-item">
     <a href="{{ .Permalink }}">
       {{ with .Params.image }}
-      <img class="post-image" src="{{ . }}" alt="{{ .Title }}">
+      <img class="post-image" src="{{ . }}" alt="{{ $.Title }}">
       {{ else }}
       <img class="post-image" src="/images/default-thumbnail.jpg" alt="{{ .Title }}">
       {{ end }}
