--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
 <div class="header-content">
 <div class="site-title">
   <a href="/">
-     <img src="/images/tau.jpg">
+     <img src="/images/tau.png">
      <span>{{ .Site.Title }}</span>
   </a>
 </div>
