--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -26,12 +26,15 @@
 
 <div class="heading">{{ i18n "quickLinks" }}</div>
 
+
 <div class="quick-links">
     {{ if .Site.Params.quickLinks }}
         <div class="quick-links-container">
             {{ range sort .Site.Params.quickLinks ".order" }}
                 <div class="quick-links-group">
-                    <div>{{ .title }}</div>
+                    <div>
+                        <a href="{{ .url }}">{{ .title }}</a>
+                    </div>
                     <ul>
                         {{ range .links }}
                             <li><a href="{{ .url }}">{{ .title }}</a></li>
