--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -32,7 +32,7 @@
         <div class="quick-links-container">
             {{ range sort .Site.Params.quickLinks ".order" }}
                 <div class="quick-links-group">
-                    <div>
+                    <div class="title">
                         <a href="{{ .url }}">{{ .title }}</a>
                     </div>
                     <ul>
