--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -46,6 +46,17 @@
     {{ end }}
 </div>
 
+<div class="homepage-dark-section">
+  <div class="text-block-wrapper">
+    {{- range .Site.Params.homepage_blocks }}
+      <div class="text-block">
+        {{ .text }}
+      </div>
+    {{- end }}
+  </div>
+</div>
+
+
 </div>
 
 <div class="content">
