--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -108,6 +108,7 @@ text-decoration: none;
   padding: 1rem;
   flex: 1 1 calc(33.333% - 1rem); /* Responsive three columns */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  max-width: 50%;
 }
 
 /* Ensure responsiveness */
