--- a/layouts/partials/listposts.html
+++ b/layouts/partials/listposts.html
@@ -7,10 +7,12 @@
   {{ $filename := .File.LogicalName }}
   {{ $parentDir := path.Base .File.Dir }}
 
-  {{ if eq $filename "_index.md" }}
-    {{ $customSort = $customSort | append (dict "page" . "sortKey" $parentDir "permalink" .Permalink) }}
-  {{ else }}
-    {{ $customSort = $customSort | append (dict "page" . "sortKey" $filename "permalink" .Permalink) }}
+  {{ if not (or (strings.HasSuffix $filename ".hide") (strings.HasSuffix $parentDir ".hide")) }}
+    {{ if eq $filename "_index.md" }}
+      {{ $customSort = $customSort | append (dict "page" . "sortKey" $parentDir "permalink" .Permalink) }}
+    {{ else }}
+      {{ $customSort = $customSort | append (dict "page" . "sortKey" $filename "permalink" .Permalink) }}
+    {{ end }}
   {{ end }}
 {{ end }}
 
