--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -9,7 +9,7 @@
 #search {
 max-width: 500px;
 margin: 20px auto 0px;
-border: solid 2px var(--link-color);
+border: solid 2px;
 border-radius: 5px;
 padding: 10px;
 }
