--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -10,7 +10,8 @@
 max-width: 500px;
 margin: 20px auto 0px;
 border: solid 2px;
-border-radius: 5px;
-padding: 10px;
+border-radius: 10px;
+padding: 1px;
 z-index: 999;
+background-color: var(--text-color)
 }
