--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,11 @@
 {{ define "main" }}
 
+
 <div class="home">
+
+<div class="quote">
+“Il y a une seule Eglise universelle des fidèles, en dehors de laquelle absolument personne n’est sauvé, et dans laquelle le Christ est lui-même à la fois le prêtre et le sacrifice…” (Pape Innocent III, Concile du Latran 4)
+</div>
 
 <div class="heading">{{ i18n "latestBlog" }}</div>
 
