--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -3,7 +3,7 @@
 
 <div class="home">
 
-<div class="heading">{{ i18n "latestBlog" }}</div>
+<div class="heading"><a href="/blog">{{ i18n "latestBlog" }}</a></div>
 
 <div class="latest-posts-container">
   {{ $posts := where (where .Site.Pages "Type" "blog") "Kind" "page" }}
