--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -77,6 +77,7 @@ nav ul li a:hover {
   .nav-menu {
     display: none;
     flex-direction: column;
+    justify-content: center;
     position: absolute;
     top: 50px;
     left: 0;
