--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -10,7 +10,14 @@
 max-width: 600px;
 margin: 20px auto 0px;
 border: solid 2px rgb(100,100,100);
-border-radius: 10px;
+border-radius: 25px;
 padding: 1px;
 z-index: 999;
+height: 50px;
+}
+
+#search input {
+background-color: black;
+border: 0px;
+border-radius: 25px;
 }
