--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -1,8 +1,8 @@
 :root {
 --pagefind-ui-primary: #eeeeee;
 --pagefind-ui-text: #eeeeee;
---pagefind-ui-background: #152028;
---pagefind-ui-border: #152028;
+--pagefind-ui-background: black;
+--pagefind-ui-border: grey;
 --pagefind-ui-tag: #152028;
 }
 
@@ -17,14 +17,11 @@ height: 50px;
 }
 
 #search input {
-background-color: black;
 border: 0px;
 border-radius: 50px;
 }
 
 .pagefind-ui__drawer {
-background: black;
-border: 2px solid grey;
 margin: 20px auto;
 padding: 10px;
 }
